--- a/src/app/components/layout/Sidebar/sidebar.component.scss
+++ b/src/app/components/layout/Sidebar/sidebar.component.scss
@@ -1,14 +1,14 @@
 @import 'src/app/components/kit-core/mixins.scss';
 
-.air__sidebar {
-  width: rem(270);
+.cui__sidebar {
+  width: rem(300);
   position: fixed;
   z-index: 999;
   top: 0;
   right: 0;
   bottom: 0;
   background: $white;
-  transform: translateX(270px);
+  transform: translateX(330px);
   @include transition-slow();
 
   &__toggled {
@@ -21,17 +21,31 @@
     position: fixed;
     z-index: 998;
     right: rem(40);
-    bottom: rem(100);
+    box-shadow: 0 5px 14px rgba(0, 0, 0, 0.1) !important;
+    display: block;
+    width: rem(50);
+    height: rem(50);
+    line-height: 48px;
+    text-align: center;
+    border-radius: 30px;
+    background: $white;
+    font-size: 18px;
+    transition: all 0.3s ease-in-out;
+    color: $primary;
+
+    &:hover {
+      background: $primary;
+
+      i {
+        color: $white;
+      }
+    }
 
     i {
+      transition: all 0.3s ease-in-out;
       position: relative;
-      bottom: -1px;
-      animation: spin 4s linear infinite;
-      @keyframes spin {
-        100% {
-          transform: rotate(360deg);
-        }
-      }
+      bottom: -3px;
+      color: $primary;
     }
   }
 
@@ -76,6 +90,51 @@
 
   &__container {
     margin-left: auto;
+  }
+
+  &__switch {
+    position: relative;
+    width: 50px;
+    height: 24px;
+    margin-bottom: 0;
+
+    input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+
+      &:checked + .air__sidebar__switch__slider {
+        background-color: $blue;
+      }
+
+      &:checked + .air__sidebar__switch__slider:before {
+        transform: translateX(26px);
+      }
+    }
+
+    &__slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: $gray-3;
+      transition: 0.4s;
+      border-radius: 22px;
+
+      &:before {
+        position: absolute;
+        content: '';
+        height: 16px;
+        width: 16px;
+        left: 4px;
+        bottom: 4px;
+        background-color: $white;
+        transition: 0.4s;
+        border-radius: 50%;
+      }
+    }
   }
 
   &__select {
@@ -136,6 +195,81 @@
           );
         }
       }
+    }
+  }
+}
+
+.color {
+  button {
+    padding: 0;
+    display: inline-block;
+    border-radius: 20px;
+    border: none;
+    position: absolute;
+    z-index: 1001;
+    height: 26px;
+    width: 26px;
+    top: -5px;
+    right: -7px;
+    line-height: 25px;
+    outline: none !important;
+    font-size: 18px;
+    box-shadow: 0 5px 14px rgba(0, 0, 0, 0.1) !important;
+
+    i {
+      color: $gray-6 !important;
+    }
+
+    &:hover {
+      background: $gray-3 !important;
+    }
+  }
+
+  input {
+    cursor: pointer;
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+  }
+
+  &.reset {
+    button {
+      display: none;
+    }
+  }
+}
+
+// dark theme
+:global(body.kit__dark) {
+  .cui__sidebar {
+    background: $dark-gray-6;
+
+    &__type {
+      border-top: 1px solid $dark-gray-5;
+
+      &__title {
+        span {
+          background: $dark-gray-6;
+        }
+      }
+    }
+
+    &__select {
+      &__item {
+        &__black {
+          &:after {
+            background: $dark-gray-4;
+          }
+        }
+      }
+    }
+
+    &__toggleButton {
+      background: $dark-gray-4;
     }
   }
 }
