--- a/src/app/components/layout/Topbar/IssuesHistory/issues-history.component.html
+++ b/src/app/components/layout/Topbar/IssuesHistory/issues-history.component.html
@@ -1,8 +1,8 @@
 <nz-dropdown [nzTrigger]="'click'">
   <a nz-dropdown class="dropdown">
-    <i class="icon icmn-folder-open"></i>
+    <i class="icon fe fe-folder"></i>
     <span class="d-none d-xl-inline">
-      <strong>Issues History</strong>
+      Issues History
     </span>
   </a>
   <ul nz-menu>
@@ -14,23 +14,24 @@
     </li>
     <li nz-menu-divider></li>
     <li nz-menu-group>
-      <span title>
-        <strong>Opened</strong>
-      </span>
+      <span title>Opened</span>
       <ul class="list-unstyled">
         <li nz-menu-item>
           <a href="javascript: void(0);">
-            <i class="menuIcon icmn-checkmark"></i>CLNUI-253 Project implemen...
+            <i class="fe fe-check-circle mr-2"></i>
+            CLNUI-253 Project implemen...
           </a>
         </li>
         <li nz-menu-item>
           <a href="javascript: void(0);">
-            <i class="menuIcon icmn-checkmark"></i>CLNUI-234 Active history iss...
+            <i class="fe fe-check-circle mr-2"></i>
+            CLNUI-234 Active history iss...
           </a>
         </li>
         <li nz-menu-item>
           <a href="javascript: void(0);">
-            <i class="menuIcon icmn-clock"></i>CLNUI-424 Ionicons intergrat...
+            <i class="fe fe-check-circle mr-2"></i>
+            CLNUI-424 Ionicons intergrat...
           </a>
         </li>
         <li nz-menu-item>
@@ -40,22 +41,20 @@
     </li>
     <li nz-menu-divider></li>
     <li nz-menu-group>
-        <span title>
-          <strong>Filters</strong>
-        </span>
-        <ul class="list-unstyled">
-          <li nz-menu-item>
-            <a href="javascript: void(0);">My open issues</a>
-          </li>
-          <li nz-menu-item>
-            <a href="javascript: void(0);">Reported by me</a>
-          </li>
-        </ul>
-      </li>
+      <span title>Filters</span>
+      <ul class="list-unstyled">
+        <li nz-menu-item>
+          <a href="javascript: void(0);">My open issues</a>
+        </li>
+        <li nz-menu-item>
+          <a href="javascript: void(0);">Reported by me</a>
+        </li>
+      </ul>
+    </li>
     <li nz-menu-divider></li>
     <li nz-menu-item>
       <a href="javascript: void(0);">
-        <i class="menuIcon icmn-cog"></i>
+        <i class="fe fe-settings mr-2"></i>
         Settings
       </a>
     </li>
