--- a/src/app/components/layout/Topbar/ProjectManagement/project-management.component.html
+++ b/src/app/components/layout/Topbar/ProjectManagement/project-management.component.html
@@ -1,15 +1,13 @@
 <nz-dropdown [nzTrigger]="'click'">
   <a nz-dropdown class="dropdown">
-    <i class="icon icmn-folder-open"></i>
+    <i class="icon fe fe-database"></i>
     <span class="d-none d-xl-inline">
-      <strong>Project Management</strong>
+      Project Management
     </span>
   </a>
   <ul nz-menu>
     <li nz-menu-group>
-      <span title>
-        <strong>Active</strong>
-      </span>
+      <span title>Active</span>
       <ul class="list-unstyled">
         <li nz-menu-item>
           <a href="javascript: void(0);">Project Management</a>
@@ -23,9 +21,7 @@
       </ul>
     </li>
     <li nz-menu-group>
-      <span title>
-        <strong>Inactive</strong>
-      </span>
+      <span title>Inactive</span>
       <ul class="list-unstyled">
         <li nz-menu-item>
           <a href="javascript: void(0);">Marketing</a>
@@ -35,7 +31,7 @@
     <li nz-menu-divider></li>
     <li nz-menu-item>
       <a href="javascript: void(0);">
-        <i class="menuIcon icmn-cog"></i>
+        <i class="fe fe-settings mr-2"></i>
         Settings
       </a>
     </li>
