--- a/src/app/components/kit-widgets/Lists/2/2.component.html
+++ b/src/app/components/kit-widgets/Lists/2/2.component.html
@@ -67,10 +67,10 @@
       </div>
     </nz-tab>
     <nz-tab nzTitle="Events">
-      <div className="text-center mb-3 py-4 bg-light rounded">No Events</div>
+      <div class="text-center mb-3 py-4 bg-light rounded">No Events</div>
     </nz-tab>
     <nz-tab nzTitle="Actions">
-      <div className="text-center mb-3 py-4 bg-light rounded">No Actions</div>
+      <div class="text-center mb-3 py-4 bg-light rounded">No Actions</div>
     </nz-tab>
   </nz-tabset>
 </div>
