--- a/src/app/components/layout/Breadcrumbs/breadcrumbs.component.html
+++ b/src/app/components/layout/Breadcrumbs/breadcrumbs.component.html
@@ -1,14 +1,14 @@
 <div class="breadcrumbs">
   <div class="path">
-    <a href routerLink="/dashboard/alpha" class="text-muted">Home</a>
+    <a href routerLink="/">Home</a>
     <ng-container *ngFor="let item of breadcrumbs; let last = last;">
       <span *ngIf="!last">
-        <span class="arrow text-muted"></span>
-        <span class="text-muted">{{ item.title }}</span>
+        <span class="arrow"></span>
+        <span>{{ item.title }}</span>
       </span>
       <span *ngIf="last">
         <span class="arrow"></span>
-        <strong>{{ item.title }}</strong>
+        <strong class="current">{{ item.title }}</strong>
       </span>
     </ng-container>
   </div>
