--- a/src/app/components/layout/Footer/footer.component.scss
+++ b/src/app/components/layout/Footer/footer.component.scss
@@ -1,45 +1,52 @@
 @import 'src/app/components/kit-core/mixins.scss';
 
 .footer {
-  max-width: rem(1560);
   margin: 0 auto;
-}
-
-.inner {
-  padding: rem(40) rem(30) rem(30);
-  margin: rem(0) rem(30) 0;
-  border-radius: 5px 5px 0 0;
-  color: $text;
-  background: $border;
+  padding: 0 rem(30) rem(30);
 
   @media (max-width: $sm-max-width) {
-    margin: 0 rem(10) !important;
+    padding: 0 rem(16) !important;
   }
 }
 
-.bottom {
-  border-top: 1px solid $gray-1;
-  padding-top: rem(20);
-  margin-top: rem(10);
+.footerInner {
+  border-top: 1px solid $border;
+  padding-top: rem(30);
 }
 
-.copyright {
-  float: right;
-  position: relative;
+.logo {
+  color: $black;
+  font-size: rem(17);
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  font-weight: 900;
 
-  @media (max-width: $sm-max-width) {
-    margin-top: rem(20);
-    float: none;
-  }
-
-  img {
-    float: left;
-    width: 30px;
-    position: absolute;
-    top: 6px;
-  }
   span {
-    display: block;
-    margin-left: 50px;
+    display: inline-block;
+    height: rem(13);
+    width: rem(13);
+    background: $black;
+    border-radius: 20px;
+    margin-left: rem(8);
+    vertical-align: middle;
+    position: relative;
+    top: -2px;
+  }
+}
+
+// dark theme
+:global(body.kit__dark) {
+  .footer {
+    color: $dark-gray-1;
+  }
+
+  .footerInner {
+    border-top: 1px solid $dark-gray-4;
+  }
+
+  .logo {
+    span {
+      background: $dark-gray-1;
+    }
   }
 }
