--- a/src/app/components/layout/Topbar/Actions/actions.component.scss
+++ b/src/app/components/layout/Topbar/Actions/actions.component.scss
@@ -3,15 +3,15 @@
 .dropdown {
   padding-right: 15px;
   position: relative;
-  display: block;
   cursor: pointer;
+  @include transition-slow;
 
   &::after {
-    color: $gray-1;
+    opacity: 0.5;
+    color: $gray-5;
     position: absolute;
-    top: 50%;
+    top: 45%;
     right: 0;
-    margin-top: -2px;
     display: inline-block;
     width: 0;
     height: 0;
@@ -22,22 +22,34 @@
     border-right: 0.3em solid transparent;
     border-bottom: 0;
     border-left: 0.3em solid transparent;
-    @include transition-slow();
+    @include transition-slow;
   }
 
   &:hover {
     color: $blue;
 
     &::after {
-      color: $gray-4;
+      color: $gray-6;
+    }
+
+    .icon {
+      color: $primary;
     }
   }
 }
 
-.avatar {
-  background-color: $border;
+.icon {
+  margin-right: rem(5);
+  position: relative;
+  bottom: -2px;
+  font-size: rem(17);
+  color: $gray-5;
+  @include transition-slow;
 }
 
-.menuIcon {
-  margin-right: rem(5);
+// dark theme
+:global(body.kit__dark) {
+  .icon {
+    color: $dark-gray-2;
+  }
 }
