--- a/src/app/components/layout/Topbar/UserMenu/user-menu.component.scss
+++ b/src/app/components/layout/Topbar/UserMenu/user-menu.component.scss
@@ -4,14 +4,13 @@
   padding-right: 15px;
   position: relative;
   cursor: pointer;
-  @include transition-slow;
 
   &::after {
-    opacity: 0.5;
-    color: $gray-5;
+    color: $gray-4;
     position: absolute;
-    top: 45%;
+    top: 50%;
     right: 0;
+    margin-top: -2px;
     display: inline-block;
     width: 0;
     height: 0;
@@ -22,42 +21,22 @@
     border-right: 0.3em solid transparent;
     border-bottom: 0;
     border-left: 0.3em solid transparent;
-    @include transition-slow;
+    @include transition-slow();
   }
 
   &:hover {
     color: $blue;
 
     &::after {
-      color: $gray-6;
-    }
-
-    .icon {
-      color: $primary;
+      color: $gray-5;
     }
   }
 }
 
-.icon {
+.avatar {
+  background-color: $border;
+}
+
+.menuIcon {
   margin-right: rem(5);
-  position: relative;
-  bottom: -2px;
-  font-size: rem(17);
-  color: $gray-5;
-  @include transition-slow;
-}
-
-// dark theme
-:global(body.kit__dark) {
-  .dropdown {
-    color: $dark-gray-2;
-
-    &:hover {
-      color: $primary;
-    }
-  }
-
-  .icon {
-    color: $dark-gray-2;
-  }
 }
