--- a/src/app/components/layout/Topbar/topbar.component.html
+++ b/src/app/components/layout/Topbar/topbar.component.html
@@ -1,24 +1,24 @@
 <div class="topbar">
   <div class="mr-4">
-    <cui-topbar-issues-history></cui-topbar-issues-history>
-  </div>
-  <div class="mr-4">
-    <cui-topbar-project-management></cui-topbar-project-management>
+    <i class="fe fe-star"></i>
   </div>
   <div class="mr-auto">
-    <cui-topbar-live-search></cui-topbar-live-search>
+    <cui-topbar-search></cui-topbar-search>
   </div>
-  <a href="https://themeforest.net/item/clean-ui-react-admin-template/21938700" target="_blank"
-    rel="noopener noreferrer" class="mr-4 d-none d-sm-inline">
-    <button nz-button nzType="danger">
-      Buy Bundle
-    </button>
-  </a>
-  <div class="mr-4">
-    <cui-topbar-home-menu></cui-topbar-home-menu>
+  <div class="mr-4 d-none d-md-block">
+    <cui-topbar-issues-history></cui-topbar-issues-history>
+  </div>
+  <div class="mb-0 mr-auto d-xl-block d-none">
+    <cui-topbar-project-management></cui-topbar-project-management>
+  </div>
+  <div class="mr-4 d-none d-sm-block">
+    <cui-topbar-language-switcher></cui-topbar-language-switcher>
+  </div>
+  <div class="mr-4 d-none d-sm-block">
+    <cui-topbar-actions></cui-topbar-actions>
   </div>
   <div>
-    <cui-topbar-profile-menu></cui-topbar-profile-menu>
+    <cui-topbar-user-menu></cui-topbar-user-menu>
   </div>
   <div>
   </div>
