--- a/src/app/components/layout/Topbar/topbar.component.scss
+++ b/src/app/components/layout/Topbar/topbar.component.scss
@@ -1,8 +1,7 @@
 @import 'src/app/components/kit-core/mixins.scss';
 
 .topbar {
-  background: $white;
-  padding: 0 rem(20);
+  padding: 0 rem(30);
   min-height: 64px;
   height: 64px;
   border-bottom: 1px solid $border;
@@ -11,4 +10,17 @@
   flex-direction: row;
   flex-wrap: nowrap;
   align-items: center;
+
+  @media (max-width: $sm-max-width) {
+    padding: 0 rem(16);
+  }
+}
+
+// dark theme
+:global(body.kit__dark) {
+  .topbar {
+    background: $dark-gray-6;
+    color: $dark-gray-1;
+    border-bottom: 1px solid $dark-gray-4;
+  }
 }
