--- a/src/app/layouts/Main/main.component.html
+++ b/src/app/layouts/Main/main.component.html
@@ -35,7 +35,7 @@
     </nz-header>
     <nz-content style="height: 100%; position: relative;">
       <cui-breadcrumbs></cui-breadcrumbs>
-      <div class="utils__content">
+      <div class="cui__utils__content">
         <router-outlet></router-outlet>
       </div>
     </nz-content>
